Fix text opacity on small

--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -57,7 +57,7 @@
 
 	width: 70%;
 	text-align: center;
-	opacity: 0;
+	opacity: 1;
 }
 
 .animation-text-small h1 {
